--- a/index.html
+++ b/index.html
@@ -1,25 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blood Strike Web</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AvA Gaming</title>
   <style>
-    html, body {
+    body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      overflow: hidden;
-      background: black;
+      background: linear-gradient(to bottom right, #111, #222);
+      color: white;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
     }
-    iframe {
-      width: 100%;
-      height: 100%;
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 1.2em;
+      margin-bottom: 30px;
+    }
+    button {
+      padding: 15px 30px;
+      font-size: 1.2em;
+      background-color: crimson;
+      color: white;
       border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    button:hover {
+      background-color: darkred;
     }
   </style>
 </head>
 <body>
-  <iframe src="https://now.gg/play/haegin/5246/brawl-kingdom" allowfullscreen></iframe>
+  <h1>Welcome to AvA Game Portal</h1>
+  <p>Click below to play an online mobile game instantly!</p>
+  <button onclick="window.open('https://now.gg/play/haegin/5246/brawl-kingdom', '_blank')">Play Now</button>
 </body>
 </html>
