--- a/index.html
+++ b/index.html
@@ -1,49 +1,167 @@
-<!DOCTYPE html>
-<html lang="en">
+!DOCTYPE html>
+<html lang="fa">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AvA Gaming</title>
+  <meta charset="UTF-8">
+  <title>Language Selection</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
+    * {
       margin: 0;
       padding: 0;
-      background: linear-gradient(to bottom right, #111, #222);
-      color: white;
-      font-family: Arial, sans-serif;
+      box-sizing: border-box;
+    }
+
+    body {
+      background: url('images/LanguagePageBG.png') no-repeat center center fixed;
+      background-size: cover;
+      min-height: 100vh;
+      font-family: sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      position: relative;
+    }
+
+    .wrapper {
+      position: relative;
+      background: rgba(0, 0, 0, 0.6);
+      padding: 30px 20px;
+      border-radius: 20px;
       text-align: center;
+      color: #fff;
+      z-index: 1;
+      border: 3px solid transparent;
+      overflow: hidden;
     }
+
+    .wrapper::before {
+      content: '';
+      position: absolute;
+      top: -3px;
+      left: -3px;
+      right: -3px;
+      bottom: -3px;
+      border-radius: 23px;
+      background: linear-gradient(270deg, red, blue, lime, purple);
+      z-index: -1;
+      animation: rgb 6s linear infinite;
+      mask: 
+        linear-gradient(#fff 0 0) content-box, 
+        linear-gradient(#fff 0 0); 
+      -webkit-mask: 
+        linear-gradient(#fff 0 0) content-box, 
+        linear-gradient(#fff 0 0);
+      mask-composite: exclude;
+      -webkit-mask-composite: destination-out;
+      padding: 3px;
+    }
+
+    @keyframes rgb {
+      0% { filter: hue-rotate(0deg); }
+      100% { filter: hue-rotate(360deg); }
+    }
+
     h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
+      font-size: 20px;
+      margin-bottom: 25px;
+      line-height: 1.6;
     }
-    p {
-      font-size: 1.2em;
-      margin-bottom: 30px;
+
+    .buttons {
+      display: flex;
+      justify-content: space-around;
+      gap: 15px;
+      flex-wrap: wrap;
     }
-    button {
-      padding: 15px 30px;
-      font-size: 1.2em;
-      background-color: crimson;
-      color: white;
-      border: none;
-      border-radius: 8px;
+
+    .lang-btn {
+      flex: 1;
+      min-width: 120px;
+      padding: 10px 20px;
+      font-size: 16px;
+      color: #fff;
+      background: #222;
+      border: 2px solid transparent;
+      border-radius: 12px;
+      position: relative;
       cursor: pointer;
+      z-index: 1;
       transition: 0.3s;
     }
-    button:hover {
-      background-color: darkred;
+
+    .lang-btn::before {
+      content: '';
+      position: absolute;
+      top: -2px;
+      left: -2px;
+      right: -2px;
+      bottom: -2px;
+      border-radius: 14px;
+      z-index: -1;
+      animation: rgb 4s linear infinite;
+    }
+
+    .btn-fa::before {
+      background: linear-gradient(45deg, #00c6ff, #0072ff);
+    }
+
+    .btn-en::before {
+      background: linear-gradient(45deg, #ff512f, #dd2476);
+    }
+
+    .lang-btn:hover {
+      opacity: 0.9;
+    }
+
+    @media (max-width: 500px) {
+      .buttons {
+        flex-direction: column;
+      }
+    }
+
+    .counter-container {
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    .rgb-text {
+      margin-top: 10px;
+      font-size: 20px;
+      font-weight: bold;
+      background: linear-gradient(90deg, red, orange, yellow, green, cyan, blue, violet);
+      background-size: 400%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: animateText 5s linear infinite;
+    }
+
+    @keyframes animateText {
+      0% { background-position: 0% }
+      100% { background-position: 400% }
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to AvA Game Portal</h1>
-  <p>Click below to play an online mobile game instantly!</p>
-  <button onclick="window.open('https://now.gg/play/haegin/5246/brawl-kingdom', '_blank')">Play Now</button>
+
+  <div class="wrapper">
+    <h1>آیا کونی هستی؟<br>Choose your language</h1>
+    <div class="buttons">
+      <button class="lang-btn btn-fa" onclick="window.location.href='mainpageFA.html'">بله</button>
+      <button class="lang-btn btn-en" onclick="window.location.href='mainpageEN.html'">yes</button>
+    </div>
+  </div>
+
+  <!-- شمارنده و متن زیر آن -->
+  <div class="counter-container">
+    <a href="https://www.hitwebcounter.com" target="_blank">
+      <img src="https://hitwebcounter.com/counter/counter.php?page=20600654&style=0010&nbdigits=5&type=ip&initCount=0"
+           title="Counter Widget"
+           alt="Visit counter For Websites"
+           border="0" />
+    </a>
+    <div class="rgb-text">Total Website Visitors</div>
+  </div>
+
 </body>
 </html>
