--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Star Profile Card</title>
+    <title>Super Star Profile Card with Snow Animation</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,6 +13,8 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
+            position: relative;
         }
 
         .card {
@@ -22,6 +24,8 @@
             overflow: hidden;
             max-width: 300px;
             text-align: center;
+            position: relative;
+            z-index: 2; /* Ensure the card is above the snow */
         }
 
         .card img {
@@ -58,6 +62,25 @@
         .card button:hover {
             background: #45a049;
         }
+
+        /* Snow animation styles */
+        .snowflake {
+            position: absolute;
+            top: -10px; /* Start above the viewport */
+            color: white;
+            font-size: 1em;
+            opacity: 0.8;
+            animation: fall linear infinite;
+        }
+
+        @keyframes fall {
+            0% {
+                transform: translateY(0);
+            }
+            100% {
+                transform: translateY(100vh); /* Full height of viewport */
+            }
+        }
     </style>
 </head>
 <body>
@@ -67,10 +90,32 @@
             <h2>Mamad</h2>
             <p>Popular Adult Film Star</p>
             <p>Known for her outstanding performances and charming personality. Jane has won numerous awards in the adult film industry.</p>
-          <a href="https://t.me/mamadi80sh" target="_blank">
+           <a href="https://t.me/mamadi80sh" target="_blank">
   <button>Follow</button>
 </a>
         </div>
     </div>
+
+    <script>
+        // Create snowflakes
+        function createSnowflake() {
+            const snowflake = document.createElement('div');
+            snowflake.className = 'snowflake';
+            snowflake.textContent = '🍆';
+            // Set random position
+            snowflake.style.left = Math.random() * 100 + 'vw';
+            // Set random duration for falling
+            snowflake.style.animationDuration = Math.random() * 3 + 2 + 's'; // Between 2s to 5s
+            document.body.appendChild(snowflake);
+
+            // Remove snowflake after falling animation
+            setTimeout(() => {
+                snowflake.remove();
+            }, 5000);
+        }
+
+        // Generate snowflakes at intervals
+        setInterval(createSnowflake, 300); // Snowflake appears every 300ms
+    </script>
 </body>
 </html>
