--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Star Profile Card with Snow Animation</title>
+    <title>Super Star Profile Card with Snow Animation and Neon Effect</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,6 +32,21 @@
             width: 100%;
             height: auto;
             border-bottom: 1px solid #ddd;
+            position: relative; /* Position for neon effect */
+            animation: neon-glow 1.5s ease-in-out infinite alternate; /* Neon glow animation */
+        }
+
+        /* Neon glow animation */
+        @keyframes neon-glow {
+            0% {
+                box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            }
+            50% {
+                box-shadow: 0 0 20px rgba(255, 255, 255, 0.8), 0 0 30px rgba(255, 105, 180, 1), 0 0 40px rgba(255, 20, 147, 1);
+            }
+            100% {
+                box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            }
         }
 
         .card h2 {
@@ -89,10 +104,10 @@
         <div class="info">
             <h2>Mamad</h2>
             <p>Popular Adult Film Star</p>
-            <p>Known for her outstanding performances and charming personality. Jane has won numerous awards in the adult film industry.</p>
-           <a href="https://t.me/mamadi80sh" target="_blank">
-  <button>Follow</button>
-</a>
+            <p>Known for her outstanding performances and charming personality. Mamad has won numerous awards in the adult film industry.</p>
+            <a href="https://t.me/mamadi80sh" target="_blank">
+                <button>Follow</button>
+            </a>
         </div>
     </div>
 
@@ -101,7 +116,7 @@
         function createSnowflake() {
             const snowflake = document.createElement('div');
             snowflake.className = 'snowflake';
-            snowflake.textContent = '🍆';
+            snowflake.textContent = '❄'; // Use snowflake icon
             // Set random position
             snowflake.style.left = Math.random() * 100 + 'vw';
             // Set random duration for falling
