--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         function createSnowflake() {
             const snowflake = document.createElement('div');
             snowflake.className = 'snowflake';
-            snowflake.textContent = '❄'; // Use snowflake icon
+            snowflake.textContent = '🍆'; // Use snowflake icon
             // Set random position
             snowflake.style.left = Math.random() * 100 + 'vw';
             // Set random duration for falling
