--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
     <div class="card">
         <img src="https://ugc.production.linktr.ee/2721e4d6-9b6f-4300-8b2a-a4e908ecb13c_IMG-3436.jpeg" alt="Super Star Image">
         <div class="info">
-            <h2>Mamad</h2>
+            <h2>Ali Panda</h2>
             <p>Popular Adult Film Star</p>
             <p>Known for her outstanding performances and charming personality. Mamad has won numerous awards in the adult film industry.</p>
-            <a href="https://t.me/mamadi80sh" target="_blank">
+            <a href="https://t.me/the_lanarhoades" target="_blank">
                 <button>Follow</button>
             </a>
         </div>
