--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Koneko Connect - Cute VPN Plans</title>
+    <title>AvaNix Connect - Cute VPN Plans</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -222,7 +222,7 @@
     <div class="container">
 
         <header class="header">
-            <h1><i class="fas fa-paw"></i> Koneko Connect</h1>
+            <h1><i class="fas fa-paw"></i> AvaNix Connect</h1>
             <p>The cutest and fastest WireGuard plans for gaming and streaming!</p>
         </header>
 
@@ -272,7 +272,7 @@
         </main>
         
         <footer>
-            <p>Koneko Connect &copy; 2025 - Stay cute, stay connected!</p>
+            <p>AvaNix Connect &copy; 2025 - Stay cute, stay connected!</p>
         </footer>
 
     </div>
